--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html class="no-js no-responsive">
   <head>
     <meta charset="utf-8">
     <title>Nerdery Test Application</title>
@@ -21,7 +21,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <!--[if lt IE 10]>
+    <!--[if lt IE 8]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <header class="main-header">
@@ -39,6 +39,17 @@
         </div>
       </div>
     </header>
+
+    <div class="main-content container">
+      <ul class="nav-tabs">
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Getaways</a></li>
+        <li><a href="#">Travel Tips</a></li>
+        <li class="active"><a href="#">News & Features</a></li>
+        <li><a href="#">Contests</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
