Finished tab navigation styles

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <div class="main-content container">
-      <ul class="nav-tabs">
+      <ul class="nav-tabs" data-tab-navigation>
         <li><a href="#">Destinations</a></li>
         <li><a href="#">Getaways</a></li>
         <li><a href="#">Travel Tips</a></li>
