Added carousel images, finished first iteration of “above-the-fold” styling

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       </div>
     </header>
 
-    <div class="main-content container">
+    <div class="main-container container">
       <ul class="nav-tabs" data-tab-navigation>
         <li><a href="#">Destinations</a></li>
         <li><a href="#">Getaways</a></li>
@@ -49,6 +49,39 @@
         <li><a href="#">Contests</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
+
+      <div class="main-content">
+        <div class="row">
+          <div class="main-left-col">
+            <div class="carousel">
+              <img class="carousel-img-active" src="/images/main-slider-1.jpg">
+              <ul class="carousel-thumbs">
+                <li><a href="#"><img src="/images/carousel-thumb-1.jpg"></a></li>
+                <li><a href="#"><img src="/images/carousel-thumb-2.jpg"></a></li>
+                <li><a href="#"><img src="/images/carousel-thumb-3.jpg"></a></li>
+                <li><a href="#"><img src="/images/carousel-thumb-4.jpg"></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="main-right-col">
+            <img class="gutter-bottom" src="/images/main-ad-1.jpg">
+            <img src="/images/main-ad-2.jpg">
+          </div>
+        </div>
+
+        <hr >
+
+        <div class="row">
+          <div class="main-left-col">
+
+          </div>
+          <div class="main-right-col">
+
+          </div>
+        </div>
+
+      </div>
+
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
