Finished sub-heading styling, icons, and banner overlay effect

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,29 @@
 
         <div class="row">
           <div class="main-left-col">
+            <div class="row">
+              <div class="browse-categories">
+                <div class="heading heading-overhang">
+                  <img class="icon" src="/images/icons/folder.png">
+                  <h3>Browse Categories</h3>
+                </div>
+                <p>alkwef awkef awklejf alwkejf alkwjehf alwkejf alwkejhf alwekjhf alwkejhf awlkejhf alkwejhf alwkjehf alkwjehf alkwjehf awlekjhf </p>
+              </div>
+              <div class="recent-articles">
+                <div class="heading">
+                  <img class="icon" src="/images/icons/hamburger.png">
+                  <h3>Recent Articles</h3>
+                </div>
+                <p>alkwef awkef awklejf alwkejf alkwjehf alwkejf alwkejhf alwekjhf alwkejhf awlkejhf alkwejhf alwkjehf alkwjehf alkwjehf awlekjhf </p>
+              </div>
+            </div>
 
+            <div class="popular-videos">
+                <div class="heading heading-overhang">
+                  <img class="icon" src="/images/icons/video.png">
+                  <h3>Popular Videos</h3>
+                </div>
+            </div>
           </div>
           <div class="main-right-col">
 
