Finished recent articles section

--- a/app/index.html
+++ b/app/index.html
@@ -73,20 +73,68 @@
 
         <div class="row">
           <div class="main-left-col">
-            <div class="row">
+            <div class="row gutter-bottom">
               <div class="browse-categories">
                 <div class="heading heading-overhang">
                   <img class="icon" src="/images/icons/folder.png">
                   <h3>Browse Categories</h3>
                 </div>
-                <p>alkwef awkef awklejf alwkejf alkwjehf alwkejf alwkejhf alwekjhf alwkejhf awlkejhf alkwejhf alwkjehf alkwjehf alkwjehf awlekjhf </p>
+                <h4>Popular Destinations</h4>
+                <ul>
+                  <li>United States</li>
+                  <li>Europe</li>
+                  <li>Latin America</li>
+                  <li>South Pacific</li>
+                  <li>Carribean</li>
+                  <li>Australia</li>
+                  <li>All Destinations</li>
+                </ul>
+
+                <h4>Getaways</h4>
+                <ul>
+                  <li>United States</li>
+                  <li>Europe</li>
+                  <li>Latin America</li>
+                  <li>South Pacific</li>
+                  <li>Carribean</li>
+                  <li>Australia</li>
+                  <li>All Destinations</li>
+                </ul>
               </div>
               <div class="recent-articles">
                 <div class="heading">
                   <img class="icon" src="/images/icons/hamburger.png">
                   <h3>Recent Articles</h3>
                 </div>
-                <p>alkwef awkef awklejf alwkejf alkwjehf alwkejf alwkejhf alwekjhf alwkejhf awlkejhf alkwejhf alwkjehf alkwjehf alkwjehf awlekjhf </p>
+                <ul>
+                  <li>
+                    <img src="/images/article-img-1.jpg">
+                    <article>
+                      <h2>Don't Miss the Parades at DisneyWorld</h2>
+                      <p>
+                        The parades at Disney World are a one of a kind celebration full of all your favorite Disney characters and music. The entertainment never stops as parades are scheduled throughout the entire day.
+                      </p>
+                    </article>
+                  </li>
+                  <li>
+                    <img src="/images/article-img-2.jpg">
+                    <article>
+                      <h2>Get Your Kicks in Downtown Las Vegas</h2>
+                      <p>
+                        Get off the strip and check out what Old Vegas has to offer. From shark infested water slides to the nightly Fremont Street Experience it’s sure to please adventurers of all ages.
+                      </p>
+                    </article>
+                  </li>
+                  <li>
+                    <img src="/images/article-img-3.jpg">
+                    <article>
+                      <h2>Don’t Miss Deep Dish in Chicago</h2>
+                      <p>
+                        Deep dish pizza is as synonymous with Chicago as Thin Crust is to New York. Any way you slice it, any trip to the windy city is incomplete without an italian flavor explosion in your mouth.
+                      </p>
+                    </article>
+                  </li>
+                </ul>
               </div>
             </div>
 
