--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,26 @@
 
     </div>
 
+    <footer class="main-footer container">
+      <ul class="social-media">
+        <li><a href="#"><img src="/images/icons/facebook.png"></a></li>
+        <li><a href="#"><img src="/images/icons/flickr.png"></a></li>
+        <li><a href="#"><img src="/images/icons/twitter.png"></a></li>
+        <li><a href="#"><img src="/images/icons/venmo.png"></a></li>
+        <li><a href="#"><img src="/images/icons/rss.png"></a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Privacy Policy</a></li>
+        <span class="divider">|</span>
+        <li><a href="#">Terms of Use</a></li>
+        <span class="divider">|</span>
+        <li><a href="#">Site Map</a></li>
+        <span class="divider">|</span>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <div class="copyright">© 2013 Crispin & Mulberry<span class="divider">|</span>1640 Riverside Drive, Hill Valley, California, 95420</div>
+    </footer>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
