Added “Current Contests” and standard Twitter widget

--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,27 @@
                 <a href="#">Terms of Use</a>
               </div>
             </section>
+            <section class="current-contests cta-box">
+              <div class="heading">
+                <img src="images/icons/trophy.png">
+                <h3>Current Contests</h3>
+              </div> 
+              <hr>
+              <ul>
+                <li>
+                  <img src="images/current-contests-img-1.jpg">
+                  <caption><a href="#">Win an all inclusive trip to visit the famous Yeti Shrine deep in the heart of Asia</a></caption>
+                </li>
+                <li>
+                  <img src="images/current-contests-img-2.jpg">
+                  <a href="#">Win a mystical trip to Bath that includes a guided tour of Stonehenge</a>
+                </li>
+              </ul>
+            </section>
+            <a class="twitter-timeline" href="https://twitter.com/crispinmulberry" data-widget-id="317675886658863104">Tweets by @crispinmulberry</a>
+            <script>
+              !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+            </script>
           </div>
         </div>
 
