Added “Popular Videos” images, tweaked some positioning here and there to more match the PSD.

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
 
         <div class="row">
           <div class="main-left-col">
-            <div class="row gutter-bottom">
+            <div class="row">
               <section class="browse-categories">
                 <div class="heading heading-primary heading-overhang">
                   <img class="icon" src="/images/icons/folder.png">
@@ -81,24 +81,26 @@
                 </div>
                 <h4>Popular Destinations</h4>
                 <ul>
-                  <li>United States</li>
-                  <li>Europe</li>
-                  <li>Latin America</li>
-                  <li>South Pacific</li>
-                  <li>Carribean</li>
-                  <li>Australia</li>
-                  <li>All Destinations</li>
+                  <li><a href="#">United States</a></li>
+                  <li><a href="#">Europe</a></li>
+                  <li><a href="#">Latin America</a></li>
+                  <li><a href="#">South Pacific</a></li>
+                  <li><a href="#">Carribean</a></li>
+                  <li><a href="#">Australia</a></li>
+                  <li><a href="#">All Destinations</a></li>
                 </ul>
 
                 <h4>Getaways</h4>
                 <ul>
-                  <li>United States</li>
-                  <li>Europe</li>
-                  <li>Latin America</li>
-                  <li>South Pacific</li>
-                  <li>Carribean</li>
-                  <li>Australia</li>
-                  <li>All Destinations</li>
+                  <li><a href="#">Adventure Vacations</a></li>
+                  <li><a href="#">Beach Vacations</a></li>
+                  <li><a href="#">Cruise Vacations</a></li>
+                  <li><a href="#">Culinary Vacations</a></li>
+                  <li><a href="#">Family Vacations</a></li>
+                  <li><a href="#">Luxury Vacations</a></li>
+                  <li><a href="#">Romantic Vacations</a></li>
+                  <li><a href="#">Ski Vacations</a></li>
+                  <li><a href="#">All Vacations</a></li>
                 </ul>
               </section>
               <section class="recent-articles">
@@ -143,6 +145,32 @@
                 <img class="icon" src="/images/icons/video.png">
                 <h3>Popular Videos</h3>
               </div>
+              <ul class="video-thumbs">
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-1.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-2.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-3.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-4.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-5.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+                <li class="video-thumb">
+                  <img src="/images/popular-videos-img-6.jpg">
+                  <label>Team Mongoose</label>
+                </li>
+              </ul>
             </section>
           </div>
           <div class="main-right-col">
