Finished visual styling of “Popular videos” section

--- a/app/index.html
+++ b/app/index.html
@@ -152,23 +152,23 @@
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-2.jpg">
-                  <label>Team Mongoose</label>
+                  <label>St Paul's Cathedral</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-3.jpg">
-                  <label>Team Mongoose</label>
+                  <label>Hollywood and Highland</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-4.jpg">
-                  <label>Team Mongoose</label>
+                  <label>Lake Wissota</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-5.jpg">
-                  <label>Team Mongoose</label>
+                  <label>The Bellagio Fountains</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-6.jpg">
-                  <label>Team Mongoose</label>
+                  <label>The Atlantic Coast</label>
                 </li>
               </ul>
             </section>
