Added a triangle icon to the “Browse Categories” section

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
                   <img class="icon" src="/images/icons/folder.png">
                   <h3>Browse Categories</h3>
                 </div>
-                <h4>Popular Destinations</h4>
+                <h4>Popular Destinations <span class="icon-triangle"></span></h4>
                 <ul>
                   <li><a href="#">United States</a></li>
                   <li><a href="#">Europe</a></li>
@@ -90,7 +90,7 @@
                   <li><a href="#">All Destinations</a></li>
                 </ul>
 
-                <h4>Getaways</h4>
+                <h4>Getaways <span class="icon-triangle"></span></h4>
                 <ul>
                   <li><a href="#">Adventure Vacations</a></li>
                   <li><a href="#">Beach Vacations</a></li>
