Added search icon to header search bar input box

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,11 @@
       <div class="container">
         <img src="/images/logo.png">
         <div class="main-header-actions">
-          <input class="main-header-search" type="text" placeholder="Search">
+          <div class="main-header-search">
+            <input type="text" placeholder="Search">
+            <img class="icon" src="/images/icons/search.png">
+          </div>
+
           <ul>
              <li><a href="#">My Account</a></li>
              <span class="divider">|</span>
