Added caption to main carousel active image

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,14 @@
         <div class="row">
           <div class="main-left-col">
             <div class="carousel">
-              <img class="carousel-img-active" src="/images/main-slider-1.jpg">
+              <div class="carousel-active">
+                <img src="/images/main-slider-1.jpg">
+                <label class="img-caption">
+                  <h1>Downtown Baltimore</h1>
+                  <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
+                </label>
+              </div>
+
               <ul class="carousel-thumbs">
                 <li><a href="#"><img src="/images/carousel-thumb-1.jpg"></a></li>
                 <li><a href="#"><img src="/images/carousel-thumb-2.jpg"></a></li>
@@ -152,27 +159,27 @@
               <ul class="video-thumbs">
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-1.jpg">
-                  <label>Team Mongoose</label>
+                  <label class="img-caption">Team Mongoose</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-2.jpg">
-                  <label>St Paul's Cathedral</label>
+                  <label class="img-caption">St Paul's Cathedral</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-3.jpg">
-                  <label>Hollywood and Highland</label>
+                  <label class="img-caption">Hollywood and Highland</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-4.jpg">
-                  <label>Lake Wissota</label>
+                  <label class="img-caption">Lake Wissota</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-5.jpg">
-                  <label>The Bellagio Fountains</label>
+                  <label class="img-caption">The Bellagio Fountains</label>
                 </li>
                 <li class="video-thumb">
                   <img src="/images/popular-videos-img-6.jpg">
-                  <label>The Atlantic Coast</label>
+                  <label class="img-caption">The Atlantic Coast</label>
                 </li>
               </ul>
             </section>
