added active styling to carousel thumbnail image element (blue border and arrow)

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
               </div>
 
               <ul class="carousel-thumbs">
-                <li><a href="#"><img src="/images/carousel-thumb-1.jpg"></a></li>
+                <li class="active"><a href="#"><img src="/images/carousel-thumb-1.jpg"></a></li>
                 <li><a href="#"><img src="/images/carousel-thumb-2.jpg"></a></li>
                 <li><a href="#"><img src="/images/carousel-thumb-3.jpg"></a></li>
                 <li><a href="#"><img src="/images/carousel-thumb-4.jpg"></a></li>
