--- a/app/index.html
+++ b/app/index.html
@@ -58,19 +58,42 @@
         <div class="row">
           <div class="main-left-col">
             <div class="carousel">
-              <div class="carousel-active">
-                <img src="/images/main-slider-1.jpg">
-                <label class="img-caption">
-                  <h1>Downtown Baltimore</h1>
-                  <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
-                </label>
-              </div>
+              <ul class="carousel-main">
+                <li data-slide="1" class="carousel-slide carousel-active">
+                  <img src="/images/main-slider-1.jpg">
+                  <label class="img-caption">
+                    <h1>Downtown Baltimore</h1>
+                    <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
+                  </label>
+                </li>
+                <li data-slide="2" class="carousel-slide">
+                  <img src="/images/main-slider-2.jpg">
+                  <label class="img-caption">
+                    <h1>Exploring the Venetian</h1>
+                    <p>Enjoy the best gondola ride on this side of the Atlantic Ocean.</p>
+                  </label>
+                </li>
+                <li data-slide="3" class="carousel-slide">
+                  <img src="/images/main-slider-3.jpg">
+                  <label class="img-caption">
+                    <h1>London After Dark</h1>
+                    <p>Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.</p>
+                  </label>
+                </li>
+                <li data-slide="4" class="carousel-slide">
+                  <img src="/images/main-slider-4.jpg">
+                  <label class="img-caption">
+                    <h1>Mount Rushmore</h1>
+                    <p>Marvel at the majestic beauty of the Black Hills and come face to face with American history.</p>
+                  </label>
+                </li>
+              </ul>
 
-              <ul class="carousel-thumbs">
-                <li class="active"><a href="#"><img src="/images/carousel-thumb-1.jpg"></a></li>
-                <li><a href="#"><img src="/images/carousel-thumb-2.jpg"></a></li>
-                <li><a href="#"><img src="/images/carousel-thumb-3.jpg"></a></li>
-                <li><a href="#"><img src="/images/carousel-thumb-4.jpg"></a></li>
+              <ul class="carousel-thumbs" data-carousel-thumbs>
+                <li data-slide-id="1" class="active"><a href="javascript:void(0);"><img src="/images/carousel-thumb-1.jpg"></a></li>
+                <li data-slide-id="2"><a href="javascript:void(0);"><img src="/images/carousel-thumb-2.jpg"></a></li>
+                <li data-slide-id="3"><a href="javascript:void(0);"><img src="/images/carousel-thumb-3.jpg"></a></li>
+                <li data-slide-id="4"><a href="javascript:void(0);"><img src="/images/carousel-thumb-4.jpg"></a></li>
               </ul>
             </div>
           </div>
