--- a/app/index.html
+++ b/app/index.html
@@ -58,30 +58,30 @@
         <div class="row">
           <div class="main-left-col">
             <div class="carousel">
-              <ul class="carousel-main">
+              <ul class="carousel-main" data-carousel-slides>
                 <li data-slide="1" class="carousel-slide carousel-active">
-                  <img src="/images/main-slider-1.jpg">
+                  <img src="/images/carousel-slide-1.jpg">
                   <label class="img-caption">
                     <h1>Downtown Baltimore</h1>
                     <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
                   </label>
                 </li>
                 <li data-slide="2" class="carousel-slide">
-                  <img src="/images/main-slider-2.jpg">
+                  <img src="/images/carousel-slide-2.jpg">
                   <label class="img-caption">
                     <h1>Exploring the Venetian</h1>
                     <p>Enjoy the best gondola ride on this side of the Atlantic Ocean.</p>
                   </label>
                 </li>
                 <li data-slide="3" class="carousel-slide">
-                  <img src="/images/main-slider-3.jpg">
+                  <img src="/images/carousel-slide-3.jpg">
                   <label class="img-caption">
                     <h1>London After Dark</h1>
                     <p>Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.</p>
                   </label>
                 </li>
                 <li data-slide="4" class="carousel-slide">
-                  <img src="/images/main-slider-4.jpg">
+                  <img src="/images/carousel-slide-4.jpg">
                   <label class="img-caption">
                     <h1>Mount Rushmore</h1>
                     <p>Marvel at the majestic beauty of the Black Hills and come face to face with American history.</p>
