Carousel hotbox now registering properly, awaiting carousel rotation code

--- a/app/index.html
+++ b/app/index.html
@@ -56,51 +56,49 @@
 
       <div class="main-content">
         <div class="row">
-          <div class="main-left-col">
-            <div class="carousel">
-              <ul class="carousel-main" data-carousel-slides>
-                <li data-slide="1" class="carousel-slide carousel-active">
-                  <img src="/images/carousel-slide-1.jpg">
-                  <label class="img-caption">
-                    <h1>Downtown Baltimore</h1>
-                    <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
-                  </label>
-                </li>
-                <li data-slide="2" class="carousel-slide">
-                  <img src="/images/carousel-slide-2.jpg">
-                  <label class="img-caption">
-                    <h1>Exploring the Venetian</h1>
-                    <p>Enjoy the best gondola ride on this side of the Atlantic Ocean.</p>
-                  </label>
-                </li>
-                <li data-slide="3" class="carousel-slide">
-                  <img src="/images/carousel-slide-3.jpg">
-                  <label class="img-caption">
-                    <h1>London After Dark</h1>
-                    <p>Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.</p>
-                  </label>
-                </li>
-                <li data-slide="4" class="carousel-slide">
-                  <img src="/images/carousel-slide-4.jpg">
-                  <label class="img-caption">
-                    <h1>Mount Rushmore</h1>
-                    <p>Marvel at the majestic beauty of the Black Hills and come face to face with American history.</p>
-                  </label>
-                </li>
-              </ul>
+          <section class="main-left-col" data-carousel>
+            <ul class="carousel-main" data-carousel-slides>
+              <li data-slide="1" class="carousel-slide carousel-active">
+                <img src="/images/carousel-slide-1.jpg">
+                <label class="img-caption">
+                  <h1>Downtown Baltimore</h1>
+                  <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
+                </label>
+              </li>
+              <li data-slide="2" class="carousel-slide">
+                <img src="/images/carousel-slide-2.jpg">
+                <label class="img-caption">
+                  <h1>Exploring the Venetian</h1>
+                  <p>Enjoy the best gondola ride on this side of the Atlantic Ocean.</p>
+                </label>
+              </li>
+              <li data-slide="3" class="carousel-slide">
+                <img src="/images/carousel-slide-3.jpg">
+                <label class="img-caption">
+                  <h1>London After Dark</h1>
+                  <p>Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.</p>
+                </label>
+              </li>
+              <li data-slide="4" class="carousel-slide">
+                <img src="/images/carousel-slide-4.jpg">
+                <label class="img-caption">
+                  <h1>Mount Rushmore</h1>
+                  <p>Marvel at the majestic beauty of the Black Hills and come face to face with American history.</p>
+                </label>
+              </li>
+            </ul>
 
-              <ul class="carousel-thumbs" data-carousel-thumbs>
-                <li data-slide-id="1" class="active"><a href="javascript:void(0);"><img src="/images/carousel-thumb-1.jpg"></a></li>
-                <li data-slide-id="2"><a href="javascript:void(0);"><img src="/images/carousel-thumb-2.jpg"></a></li>
-                <li data-slide-id="3"><a href="javascript:void(0);"><img src="/images/carousel-thumb-3.jpg"></a></li>
-                <li data-slide-id="4"><a href="javascript:void(0);"><img src="/images/carousel-thumb-4.jpg"></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="main-right-col">
+            <ul class="carousel-thumbs" data-carousel-thumbs>
+              <li data-slide-id="1" class="active"><a href="javascript:void(0);"><img src="/images/carousel-thumb-1.jpg"></a></li>
+              <li data-slide-id="2"><a href="javascript:void(0);"><img src="/images/carousel-thumb-2.jpg"></a></li>
+              <li data-slide-id="3"><a href="javascript:void(0);"><img src="/images/carousel-thumb-3.jpg"></a></li>
+              <li data-slide-id="4"><a href="javascript:void(0);"><img src="/images/carousel-thumb-4.jpg"></a></li>
+            </ul>
+          </section>
+          <section class="main-right-col">
             <img class="gutter-bottom" src="/images/main-ad-1.jpg">
             <img src="/images/main-ad-2.jpg">
-          </div>
+          </section>
         </div>
 
         <hr >
