Added alt text for images on page

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
     <header class="main-header">
       <div class="container">
-        <img src="/images/logo.png">
+        <img src="/images/logo.png" alt="Logo for Crispin and Mulburry">
         <div class="main-header-actions">
           <div class="main-header-search">
             <input type="text" placeholder="Search">
@@ -59,28 +59,28 @@
           <section class="main-left-col" data-carousel>
             <ul class="carousel-main" data-carousel-slides>
               <li data-slide="1" class="carousel-slide carousel-active">
-                <img src="/images/carousel-slide-1.jpg">
+                <img src="/images/carousel-slide-1.jpg" alt="Check out the USS Torsk at Baltimore’s historic Maritime Museum.">
                 <label class="img-caption">
                   <h1>Downtown Baltimore</h1>
                   <p>Check out the USS Torsk at Baltimore’s historic Maritime Museum.</p>
                 </label>
               </li>
               <li data-slide="2" class="carousel-slide">
-                <img src="/images/carousel-slide-2.jpg">
+                <img src="/images/carousel-slide-2.jpg" alt="Enjoy the best gondola ride on this side of the Atlantic Ocean.">
                 <label class="img-caption">
                   <h1>Exploring the Venetian</h1>
                   <p>Enjoy the best gondola ride on this side of the Atlantic Ocean.</p>
                 </label>
               </li>
               <li data-slide="3" class="carousel-slide">
-                <img src="/images/carousel-slide-3.jpg">
+                <img src="/images/carousel-slide-3.jpg" alt="Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.">
                 <label class="img-caption">
                   <h1>London After Dark</h1>
                   <p>Enjoy the pubs along the river Thames &amp; get spectacular view from the London Eye.</p>
                 </label>
               </li>
               <li data-slide="4" class="carousel-slide">
-                <img src="/images/carousel-slide-4.jpg">
+                <img src="/images/carousel-slide-4.jpg" alt="Marvel at the majestic beauty of the Black Hills and come face to face with American history.">
                 <label class="img-caption">
                   <h1>Mount Rushmore</h1>
                   <p>Marvel at the majestic beauty of the Black Hills and come face to face with American history.</p>
@@ -89,15 +89,15 @@
             </ul>
 
             <ul class="carousel-thumbs" data-carousel-thumbs>
-              <li data-slide-id="1" class="active"><a href="javascript:void(0);"><img src="/images/carousel-thumb-1.jpg"></a></li>
-              <li data-slide-id="2"><a href="javascript:void(0);"><img src="/images/carousel-thumb-2.jpg"></a></li>
-              <li data-slide-id="3"><a href="javascript:void(0);"><img src="/images/carousel-thumb-3.jpg"></a></li>
-              <li data-slide-id="4"><a href="javascript:void(0);"><img src="/images/carousel-thumb-4.jpg"></a></li>
+              <li data-slide-id="1" class="active"><a href="javascript:void(0);"><img src="/images/carousel-thumb-1.jpg" alt="Downtown Baltimore"></a></li>
+              <li data-slide-id="2"><a href="javascript:void(0);"><img src="/images/carousel-thumb-2.jpg" alt="Exploring the Venetian"></a></li>
+              <li data-slide-id="3"><a href="javascript:void(0);"><img src="/images/carousel-thumb-3.jpg" alt="London After Dark"></a></li>
+              <li data-slide-id="4"><a href="javascript:void(0);"><img src="/images/carousel-thumb-4.jpg" alt="Mount Rushmore"></a></li>
             </ul>
           </section>
           <section class="main-right-col">
-            <img class="gutter-bottom" src="/images/main-ad-1.jpg">
-            <img src="/images/main-ad-2.jpg">
+            <img class="gutter-bottom" src="/images/main-ad-1.jpg" alt="An ad for Holiday Inn (Save up to 20%!)">
+            <img src="/images/main-ad-2.jpg" alt="An ad for Dreamwork's Rise of the Guardians">
           </section>
         </div>
 
@@ -142,7 +142,7 @@
                 </div>
                 <ul>
                   <li>
-                    <img src="/images/article-img-1.jpg">
+                    <img src="/images/article-img-1.jpg" alt="Mickey Mouse at DisneyWorld">
                     <article>
                       <h2>Don't Miss the Parades at DisneyWorld</h2>
                       <p>
@@ -151,7 +151,7 @@
                     </article>
                   </li>
                   <li>
-                    <img src="/images/article-img-2.jpg">
+                    <img src="/images/article-img-2.jpg" alt="A Welcome to Downtown Las Vegas sign">
                     <article>
                       <h2>Get Your Kicks in Downtown Las Vegas</h2>
                       <p>
@@ -160,7 +160,7 @@
                     </article>
                   </li>
                   <li>
-                    <img src="/images/article-img-3.jpg">
+                    <img src="/images/article-img-3.jpg" alt="A picture of Chicago's skyline">
                     <article>
                       <h2>Don’t Miss Deep Dish in Chicago</h2>
                       <p>
@@ -179,27 +179,27 @@
               </div>
               <ul class="video-thumbs">
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-1.jpg">
+                  <img src="/images/popular-videos-img-1.jpg" alt="Team Mongoose headquarters">
                   <label class="img-caption">Team Mongoose</label>
                 </li>
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-2.jpg">
+                  <img src="/images/popular-videos-img-2.jpg" alt="St. Paul's Cathedral">
                   <label class="img-caption">St Paul's Cathedral</label>
                 </li>
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-3.jpg">
+                  <img src="/images/popular-videos-img-3.jpg" alt="A shopping mall at Hollywood center">
                   <label class="img-caption">Hollywood and Highland</label>
                 </li>
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-4.jpg">
+                  <img src="/images/popular-videos-img-4.jpg" alt="A hollowed-out tree stump">
                   <label class="img-caption">Lake Wissota</label>
                 </li>
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-5.jpg">
+                  <img src="/images/popular-videos-img-5.jpg" alt="The Bellagio at nighttime">
                   <label class="img-caption">The Bellagio Fountains</label>
                 </li>
                 <li class="video-thumb">
-                  <img src="/images/popular-videos-img-6.jpg">
+                  <img src="/images/popular-videos-img-6.jpg" alt="A beach on the Atlantic Ocean">
                   <label class="img-caption">The Atlantic Coast</label>
                 </li>
               </ul>
