IE8 support — fixed some styles, plus added “selectivzr” library to use last-child selectors in CSS in IE8.

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <!--[if (gte IE 6)&(lte IE 8)]>
+      <script type="text/javascript" src="scripts/selectivizr.js"></script>
+    <![endif]-->
+
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
