Added an IE8 fix for .heading-overhang width (calc doesn’t work in IE8)

--- a/app/index.html
+++ b/app/index.html
@@ -308,5 +308,9 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
+
+    <!--[if (gte IE 6)&(lte IE 8)]>
+      <script type="text/javascript" src="scripts/ie8.js"></script>
+    <![endif]-->
   </body>
 </html>
