--- a/app/index.html
+++ b/app/index.html
@@ -50,15 +50,19 @@
 
     <div class="main-container container">
       <ul class="nav-tabs" data-tab-navigation>
-        <li><a href="#">Destinations</a></li>
-        <li><a href="#">Getaways</a></li>
-        <li><a href="#">Travel Tips</a></li>
-        <li class="active"><a href="#">News & Features</a></li>
-        <li><a href="#">Contests</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="javascript:void(0);">Destinations</a></li>
+        <li><a href="javascript:void(0);">Getaways</a></li>
+        <li><a href="javascript:void(0);">Travel Tips</a></li>
+        <li class="active" data-page="4"><a href="javascript:void(0);">News & Features</a></li>
+        <li><a href="javascript:void(0);">Contests</a></li>
+        <li><a href="javascript:void(0);">Contact Us</a></li>
       </ul>
 
-      <div class="main-content">
+      <div class="main-content tab-content" data-page="nocontent">
+        <h1>There's no content for this tab yet!  Come back later!</h1>
+      </div>
+
+      <div class="main-content tab-content tab-active" data-page="content">
         <div class="row">
           <section class="main-left-col" data-carousel>
             <ul class="carousel-main" data-carousel-slides>
