Collapsable “browse categories” section started

--- a/app/index.html
+++ b/app/index.html
@@ -119,8 +119,9 @@
                   <img class="icon" src="/images/icons/folder.png">
                   <h3>Browse Categories</h3>
                 </div>
-                <h4>Popular Destinations <span class="icon-triangle"></span></h4>
-                <ul>
+
+                <h4 data-collapse-ctrl="1">Popular Destinations <span class="icon-triangle"></span></h4>
+                <ul data-collapse-body="1" class="collapsable">
                   <li><a href="#">United States</a></li>
                   <li><a href="#">Europe</a></li>
                   <li><a href="#">Latin America</a></li>
@@ -130,8 +131,8 @@
                   <li><a href="#">All Destinations</a></li>
                 </ul>
 
-                <h4>Getaways <span class="icon-triangle"></span></h4>
-                <ul>
+                <h4 data-collapse-ctrl="2">Getaways <span class="icon-triangle"></span></h4>
+                <ul data-collapse-body="2" class="collapsable">
                   <li><a href="#">Adventure Vacations</a></li>
                   <li><a href="#">Beach Vacations</a></li>
                   <li><a href="#">Cruise Vacations</a></li>
